[package]
name = "zsee"
version = "0.0.1"
license = "MIT"
edition = "2021"
authors = ["nekayooh <nekayooh@139.com>"]
readme = "README.md"
description = "A dioxus component library based on tailwind and table-icons."
repository = "https://github.com/nekayooh/zsee"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
]

[dependencies]
dioxus = "0.4.3"
gloo = "0.11.0"
gloo-timers = {version = "0.3.0",features = ["futures"]}
bson = "2.9.0"